--- a/magneticconfig.json
+++ b/magneticconfig.json
@@ -10,7 +10,7 @@
 },
 {
 "name":"尼玛搜",
-"rootUrl":"http://www.nms333.com"
+"rootUrl":"http://www.nms555.com"
 },
 {
 "name":"1337X",
@@ -30,7 +30,7 @@
 },
 {
 "name":"屌丝搜",
-"rootUrl":"http://www.diaosisou.biz"
+"rootUrl":"http://www.diaosisou.xyz"
 },
 {
 "name":"katcr",
