--- a/magneticconfig.json
+++ b/magneticconfig.json
@@ -38,7 +38,7 @@
 },
 {
 "name":"ThePirateBay",
-"rootUrl":"https://openpirate.org"
+"rootUrl":"https://thehiddenbay.com"
 },
 {
 "name":"SkyTorrents",
