update search source config

--- a/magneticconfig.json
+++ b/magneticconfig.json
@@ -9,10 +9,6 @@
 "rootUrl":"https://www.btzhizhu.me"
 },
 {
-"name":"尼玛搜",
-"rootUrl":"http://www.nms555.com"
-},
-{
 "name":"1337X",
 "rootUrl":"https://1337x.to"
 },
@@ -51,6 +47,36 @@
 {
 "name":"Nyaa",
 "rootUrl":"https://nyaa.si"
+
+},
+{
+"name":"LimeTorrents",
+"rootUrl":"https://www.limetorrents.info"
+
+},
+{
+"name":"TorLock",
+"rootUrl":"https://www.torlock.com"
+},
+{
+"name":"Seedpeer",
+"rootUrl":"https://www.seedpeer.me"
+},
+{
+"name":"Monova",
+"rootUrl":"https://monova.org"
+},
+{
+"name":"Sukebei",
+"rootUrl":"https://sukebei.nyaa.si"
+},
+{
+"name":"Btso",
+"rootUrl":"https://btsow.pw"
+},
+{
+"name":"阿狸磁力",
+"rootUrl":"http://alicili.me"
 },
 {
 "name":"TorrentKitty",
