--- a/magneticconfig.json
+++ b/magneticconfig.json
@@ -38,7 +38,7 @@
 },
 {
 "name":"SkyTorrents",
-"rootUrl":"https://www.skytorrents.to"
+"rootUrl":"https://www.skytorrents.lol"
 },
 {
 "name":"EZTV",
