--- a/magneticconfig.json
+++ b/magneticconfig.json
@@ -1,4 +1,3 @@
-
 [
 {
 "name":"BT兔子",
@@ -47,12 +46,10 @@
 {
 "name":"Nyaa",
 "rootUrl":"https://nyaa.si"
-
 },
 {
 "name":"LimeTorrents",
 "rootUrl":"https://www.limetorrents.info"
-
 },
 {
 "name":"TorLock",
@@ -77,6 +74,30 @@
 {
 "name":"阿狸磁力",
 "rootUrl":"http://aliciliba.ws"
+},
+{
+"name":"BtDigg",
+"http://btdiggs.pw"
+},
+{
+"name":"BtKitty",
+"http://newbtkitty.org"
+},
+{
+"name":"Idope",
+"https://idope.xyz"
+},
+{
+"name":"ExtraTorrent",
+"https://extratorrent.si"
+},
+{
+"name":"BTDB",
+"https://btdb.eu"
+},
+{
+"name":"YTS",
+"https://yts.am"
 },
 {
 "name":"TorrentKitty",
