--- a/magneticconfig.json
+++ b/magneticconfig.json
@@ -29,7 +29,7 @@
 	},
 	{
 		"name": "katcr",
-		"rootUrl": "https://kickasstorrents.to"
+		"rootUrl": "https://kickasstorrent.cr"
 	},
 	{
 		"name": "ThePirateBay",
