--- a/magneticconfig.json
+++ b/magneticconfig.json
@@ -13,7 +13,7 @@
 	},
 	{
 		"name": "Zooqle",
-		"rootUrl": "https://zooqle.com"
+		"rootUrl": "https://zooqle-com.prox3.info"
 	},
 	{
 		"name": "手撕包菜",
