--- a/magneticconfig.json
+++ b/magneticconfig.json
@@ -9,15 +9,15 @@
 	},
 	{
 		"name": "1337X",
-		"rootUrl": "https://1337x.to"
+		"rootUrl": "https://www.1337x.st"
 	},
 	{
 		"name": "Zooqle",
-		"rootUrl": "https://zooqle-com.prox3.info"
+		"rootUrl": "https://zooqle.com"
 	},
 	{
 		"name": "手撕包菜",
-		"rootUrl": "http://www.cilibc.com"
+		"rootUrl": "http://www.btbaocai.in"
 	},
 	{
 		"name": "TorrentZ",
@@ -41,7 +41,7 @@
 	},
 	{
 		"name": "EZTV",
-		"rootUrl": "https://eztv.tf"
+		"rootUrl": "https://eztv.io"
 	},
 	{
 		"name": "Nyaa",
