--- a/magneticconfig.json
+++ b/magneticconfig.json
@@ -128,10 +128,10 @@
 		"name": "TorrentKitty",
 		"rootUrl": "https://www.torrentkitty.tv",
 		"test_url": "https://www.torrentkitty.tv/search/home/"
-	}
+	},
 	{
 		"name": "TorrentGalaxy",
-		"rootUrl": "https://torrentgalaxy.to/",
+		"rootUrl": "https://torrentgalaxy.to",
 		"test_url": "https://torrentgalaxy.to/torrents.php?search=home"
 	}
 ]
