--- a/magneticconfig.json
+++ b/magneticconfig.json
@@ -31,8 +31,8 @@
 	},
 	{
 		"name": "屌丝搜",
-		"rootUrl": "http://www.diaosisou.co",
-		"test_url": "http://www.diaosisou.co/list/home/1"
+		"rootUrl": "http://www.diaosisou.in",
+		"test_url": "http://www.diaosisou.in/list/home/1"
 	},
 	{
 		"name": "katcr",
