--- a/magneticconfig.json
+++ b/magneticconfig.json
@@ -21,8 +21,8 @@
 	},
 	{
 		"name": "手撕包菜",
-		"rootUrl": "http://www.btbaocai.in",
-		"test_url": "http://www.btbaocai.in/search/home/"
+		"rootUrl": "http://www.btbaocai.pw",
+		"test_url": "http://www.btbaocai.pw/search/home/"
 	},
 	{
 		"name": "TorrentZ",
@@ -31,8 +31,8 @@
 	},
 	{
 		"name": "屌丝搜",
-		"rootUrl": "http://www.diaosisou.in",
-		"test_url": "http://www.diaosisou.in/list/home/1"
+		"rootUrl": "http://www.diaosisou.net",
+		"test_url": "http://www.diaosisou.net/list/home/1"
 	},
 	{
 		"name": "katcr",
@@ -96,13 +96,13 @@
 	},
 	{
 		"name": "BtDigg",
-		"rootUrl": "http://btdiggba.pw",
-		"test_url": "http://btdiggba.pw/search/aG9tZQ/1/0/0.html"
+		"rootUrl": "http://btdigg8.net",
+		"test_url": "http://btdigg8.net/search/aG9tZQ/1/0/0.html"
 	},
 	{
 		"name":"BtKitty",
-		"rootUrl": "http://newbtkitty.org",
-		"test_url": "http://newbtkitty.org/search/y8jPTQUA/1/0/0.html"
+		"rootUrl": "http://okbtkitty.pw",
+		"test_url": "http://okbtkitty.pw/search/y8jPTQUA/1/0/0.html"
 	},
 	{
 		"name": "Idope",
