--- a/magneticconfig.json
+++ b/magneticconfig.json
@@ -31,8 +31,8 @@
 	},
 	{
 		"name": "屌丝搜",
-		"rootUrl": "http://www.diaosisou.net",
-		"test_url": "http://www.diaosisou.net/list/home/1"
+		"rootUrl": "http://www.diaosisou8.com",
+		"test_url": "http://www.diaosisou8.com/list/home/1"
 	},
 	{
 		"name": "katcr",
