--- a/magneticconfig.json
+++ b/magneticconfig.json
@@ -101,8 +101,8 @@
 	},
 	{
 		"name":"BtKitty",
-		"rootUrl": "http://okbtkitty.pw",
-		"test_url": "http://okbtkitty.pw/search/y8jPTQUA/1/0/0.html"
+		"rootUrl": "http://newbtkitty.org",
+		"test_url": "http://newbtkitty.org/search/y8jPTQUA/1/0/0.html"
 	},
 	{
 		"name": "Idope",
