--- a/magneticconfig.json
+++ b/magneticconfig.json
@@ -86,7 +86,7 @@
 	},
 	{
 		"name": "Btso",
-		"rootUrl": "https://btsow.pw",
+		"rootUrl": "https://btspread.com",
 		"test_url": "https://btsow.pw/search/home"
 	},
 	{
