--- a/magneticconfig.json
+++ b/magneticconfig.json
@@ -87,7 +87,7 @@
 	{
 		"name": "Btso",
 		"rootUrl": "https://btspread.com",
-		"test_url": "https://btsow.pw/search/home"
+		"test_url": "https://btspread.com/search/home"
 	},
 	{
 		"name": "阿狸磁力",
