--- a/magneticconfig.json
+++ b/magneticconfig.json
@@ -96,8 +96,8 @@
 	},
 	{
 		"name": "BtDigg",
-		"rootUrl": "http://btdigg8.net",
-		"test_url": "http://btdigg8.net/search/aG9tZQ/1/0/0.html"
+		"rootUrl": "http://btdigg8.cc",
+		"test_url": "http://btdigg8.cc/search/aG9tZQ/1/0/0.html"
 	},
 	{
 		"name":"BtKitty",
