--- a/torrent/config.json
+++ b/torrent/config.json
@@ -101,8 +101,8 @@
 	},
 	{
 		"name": "BtDigg",
-		"rootUrl": "http://btdigg8.cc",
-		"test_url": "http://btdigg8.cc/search/aG9tZQ/1/0/0.html"
+		"rootUrl": "http://cnbtdigg.org/",
+		"test_url": "http://cnbtdigg.org/search/aG9tZQ/1/0/0.html"
 	},
 	{
 		"name":"BtKitty",
