--- a/torrent/config.json
+++ b/torrent/config.json
@@ -31,8 +31,8 @@
 	},
 		{
 		"name": "大白菜",
-		"rootUrl": "https://dabaicai.ml",
-		"test_url": "https://dabaicai.ml/infolist.php?q=home"
+		"rootUrl": "https://zhima998.com",
+		"test_url": "https://zhima998.com/infolist.php?q=home"
 	},
 	{
 		"name": "屌丝搜",
