--- a/torrent/config.json
+++ b/torrent/config.json
@@ -91,8 +91,8 @@
 	},
 	{
 		"name": "Btso",
-		"rootUrl": "https://btos.pw",
-		"test_url": "https://btos.pw/search/home"
+		"rootUrl": "https://btsow.club",
+		"test_url": "https://btsow.club/search/home"
 	},
 	{
 		"name": "阿狸磁力",
